improve admin api
