# routes/pipuproRoutes.js
@@ -8,6 +8,13 @@ import {
 	getSubscriptionPrices,
 	getSubscription,
 	getSubscriptions,
+	getAdmins,
+	getConflictTickets,
+	getApprovals,
+	getRoles,
+	getRole,
+	addRole,
+	updateRole,
 } from '../controllers/pipupro.js';
 import { requireAuth, verifyPermission } from '../middleware/requireAuth.js';
 
@@ -19,7 +26,19 @@ router.get('/finances', requireAuth, getFinances);
 router.get('/subscriptions', requireAuth, getSubscriptions);
 router.get('/subscriptions/:id', requireAuth, getSubscription);
 router.get('/subscription-prices', requireAuth, getSubscriptionPrices);
-router.patch('/update-subscription-prices', requireAuth, updateSubscriptionPrices);
+router.patch(
+	'/update-subscription-prices',
+	requireAuth,
+	updateSubscriptionPrices
+);
 router.post('/subscription-plans', requireAuth, createSubscriptionPlan);
+router.get('/roles', requireAuth, getRoles);
+router.get('/roles/:id', requireAuth, getRole);
+router.post('/roles', requireAuth, addRole);
+router.patch('/roles', requireAuth, updateRole);
+router.get('/conflicts', requireAuth, getConflictTickets);
+router.get('/approvals', requireAuth, getApprovals);
+router.get('/admins', requireAuth, getAdmins);
+// router.post('/conflicts', requireAuth, addConflict);
 
 export default router;
