# swagger.yaml
@@ -2132,14 +2132,14 @@ paths:
           content:
             application/json:
               schema:
-                type: object    
+                type: object
     post:
       tags:
         - 🏫 Company
       summary: Add new role
       description: >-
         The API endpoint allows company add role.
-      operationId: addNewRole
+      operationId: addNewCompanyRole
       requestBody:
         content:
           application/json:
@@ -2441,7 +2441,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object    
+                type: object
     post:
       tags:
         - 🏫 Company
@@ -2722,7 +2722,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object    
+                type: object
     post:
       tags:
         - 🏫 Company
@@ -3039,7 +3039,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object    
+                type: object
     post:
       tags:
         - 🏫 Company
@@ -3191,7 +3191,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object    
+                type: object
     post:
       tags:
         - 🏫 Company
@@ -6707,6 +6707,66 @@ paths:
             application/json:
               schema:
                 type: object
+  /admin/admins:
+    get:
+      tags:
+        - 👨‍💼 Pipopro Admin
+      summary: Get admins
+      description: >-
+        The API endpoint allows you to retrieve all admins
+      operationId: getAdmins
+      responses:
+        '200':
+          description: Get admins
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '443'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:44:47 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"1bb-YVaffq7t8o3of0yDl9g26tprr/8"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '493'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '631'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
   /admin:
     get:
       tags:
@@ -6827,6 +6887,66 @@ paths:
             application/json:
               schema:
                 type: object
+  /admin/approvals:
+    get:
+      tags:
+        - 👨‍💼 Pipopro Admin
+      summary: Get approvals
+      description: >-
+        The API endpoint allows you to retrieve all approved accounts
+      operationId: getAprrovals
+      responses:
+        '200':
+          description: Get approvals
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '443'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:44:47 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"1bb-YVaffq7t8o3of0yDl9g26tprr/8"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '493'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '631'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
   /admin/finances:
     get:
       tags:
@@ -6838,6 +6958,66 @@ paths:
       responses:
         '200':
           description: Get finances
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '443'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:44:47 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"1bb-YVaffq7t8o3of0yDl9g26tprr/8"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '493'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '631'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
+  /admin/conflicts:
+    get:
+      tags:
+        - 👨‍💼 Pipopro Admin
+      summary: Get all reported conflicts
+      description: >-
+        The API endpoint allows you to retrieve all conflicts
+      operationId: getConflicts
+      responses:
+        '200':
+          description: Get conflicts
           headers:
             Access-Control-Allow-Credentials:
               schema:
@@ -7236,6 +7416,312 @@ paths:
       responses:
         '200':
           description: subscription id
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '443'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:44:47 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"1bb-YVaffq7t8o3of0yDl9g26tprr/8"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '493'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '631'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
+  /admin/roles:
+    get:
+      tags:
+        - 👨‍💼 Pipopro Admin
+      summary: Get roles
+      description: >-
+        The API endpoint allows you to retrieve the roles
+      operationId: getRoles
+      responses:
+        '200':
+          description: Get roles
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '443'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:44:47 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"1bb-YVaffq7t8o3of0yDl9g26tprr/8"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '493'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '631'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
+    post:
+      tags:
+        - 👨‍💼 Pipopro Admin
+      summary: Add new role
+      description: >-
+        The API endpoint allows admin to add role.
+      operationId: addNewRole
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: john
+                description:
+                  type: string
+                  example: '+234568908798'
+                permissions:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                        example: manageProfile
+                      isAllowed:
+                        type: boolean
+                        example: true
+      responses:
+        '201':
+          description: New role created
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '500'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:44:09 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"1f4-1q38Sbu25p0UVmeYQmrEv2VrgPg"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '495'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '772'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                  message:
+                    type: string
+                    example: >-
+                      Role added successfully.
+    patch:
+      tags:
+        - 👨‍💼 Pipopro Admin
+      summary: update role
+      description: >-
+        The API endpoint allows  update role.
+      operationId: updateRole
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                roleId:
+                  type: string
+                  example: '681e2429c5421ead94648571'
+                name:
+                  type: string
+                  example: john
+                description:
+                  type: string
+                  example: '+234568908798'
+                permissions:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                        example: manageProfile
+                      isAllowed:
+                        type: boolean
+                        example: true
+      responses:
+        '201':
+          description: Updated role
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '500'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:44:09 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"1f4-1q38Sbu25p0UVmeYQmrEv2VrgPg"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '495'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '772'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                  message:
+                    type: string
+                    example: >-
+                      Role updated successfully.
+  /admin/roles/{roleId}:
+    get:
+      tags:
+        - 👨‍💼 Pipopro Admin
+      summary: Get role by id
+      description: >-
+        The API endpoint allows you to retrieve the  role by id
+      operationId: getRole
+      parameters:
+        - name: roleId
+          in: path
+          required: true
+          description: The role id
+      responses:
+        '200':
+          description: Get role
           headers:
             Access-Control-Allow-Credentials:
               schema:
